# vita-poc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  errors.py  main.py  schemas.py  worker.py
app/api/: dependencies.py  routes.py
app/db/: base.py  session.py
app/repositories/: bookings.py  events.py  idempotency.py
app/services/: bookings.py  events.py
tests/: conftest.py  test_api.py  test_services.py
