[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-booking-api"
version = "0.1.0"
description = "FastAPI ticket booking API with SQLite holds, payment idempotency, and tests"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "greenlet>=3.0.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
